--- a/templates/index.html
+++ b/templates/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
- <div class="login">
+<div class="login">
 	<h1>Screenshot Taker</h1>
 
     <form action = "/screenshot_name" method="post">
-    	<input type="text" name="test" placeholder="Save your file name as" required="required" />
+      <input type="text" name="test" placeholder="Provide the link" required="required" />
         <button type="submit" class="btnGenerate">Save</button>
     </form>
 
