--- a/templates/success.html
+++ b/templates/success.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-     <meta charset="UTF-8">
-     <title>SUCCESS!</title>
+    <meta charset="UTF-8">
+    <title>SUCCESS!</title>
 
 <link rel="stylesheet" href="{{ url_for('static', filename='style2.css') }}">
 
@@ -10,8 +10,7 @@
 <body> 
 <form action="/take_screenshot" method="get">
   <div class ="para">
-    <p>Click on the button given below</p>
-    <p>and navigate to the page which you want to take a screenshot of within the next 5 seconds</p>
+    <p>Click on the link given below to take a screenshot of the provided link!</p>
     <br>
   </div>
     <button class="btn"><i class="fa fa-download"></i>Click here</button>
